--- a/eats.html
+++ b/eats.html
@@ -112,7 +112,7 @@
               </div>
             </div>
             <button class="shopbag">
-              <img class="imgsh" src="shopping-bag.png" />
+              <img class="imgsh" src="assets/imgs/shopping-bag.png" />
             </button>
           </div>
         </div>
@@ -133,75 +133,75 @@
     <div class="container imgc">
       <div class="row imgs center-xs center-md center-lg">
         <figure class=" fig col-lg-4 col-md-6">
-          <img src="95b745f6ce6a45903c3ed254afd72e46-w550-27.png">
+          <img src="assets/imgs/95b745f6ce6a45903c3ed254afd72e46-w550-27.png">
           <figcaption>
-            <p class="one"><a href="file:///C:/VS/Uber%20Eats/eats2.html" target="_blank">Макдоналдс — Газетный</a></p>
+            <p class="one"><a href="eats2.html" target="_blank">Макдоналдс — Газетный</a></p>
             <p class="two">₽₽ • Бургеры</p>
-            <p class="three">25 - 35 мин</p>
+            <p class="three"><a href="reviews.html" target="_blank">⭐⭐⭐⭐⭐</a></p>
           </figcaption>
         </figure>
         <figure class="col-lg-4 col-md-6">
-          <img src="96b745f6ce6a45903c3ed254afd72e46-w550-27.png">
+          <img src="assets/imgs/96b745f6ce6a45903c3ed254afd72e46-w550-27.png">
           <figcaption>
-            <p class="one"><a href="file:///C:/VS/Uber%20Eats/eats2.html">DimSum & Co — ЦДМ</a></p>
+            <p class="one"><a href="eats2.html">DimSum & Co — ЦДМ</a></p>
             <p class="two">₽ • Японская • Китайская • Азиатская</p>
-            <p class="three">40 - 50 мин</p>
+            <p class="three"><a href="reviews.html" target="_blank">⭐⭐⭐⭐</a></p>
           </figcaption>
         </figure class="col-lg-4 col-md-6">
         <figure class="col-lg-4 col-md-6">
-          <img src="97b745f6ce6a45903c3ed254afd72e46-w550-27.png">
+          <img src="assets/imgs/97b745f6ce6a45903c3ed254afd72e46-w550-27.png">
           <figcaption>
-            <p class="one"><a href="file:///C:/VS/Uber%20Eats/eats2.html">ДвижОК — Манежная</a></p>
+            <p class="one"><a href="eats2.html">ДвижОК — Манежная</a></p>
             <p class="two">₽ • Американская • Европейская</p>
-            <p class="three">35 - 45 мин</p>
+            <p class="three"><a href="reviews.html" target="_blank">⭐⭐⭐⭐</a></p>
           </figcaption>
         </figure>
         <figure class="col-lg-4 col-md-6">
-          <img src="98b745f6ce6a45903c3ed254afd72e46-w550-27.png">
+          <img src="assets/imgs/98b745f6ce6a45903c3ed254afd72e46-w550-27.png">
           <figcaption>
-            <p class="one"><a href="file:///C:/VS/Uber%20Eats/eats2.html">НЯ — NHA</a></p>
+            <p class="one"><a href="eats2.html">НЯ — NHA</a></p>
             <p class="two">Точка Дзы — Цветной</p>
-            <p class="three">30 - 40 мин</p>
+            <p class="three"><a href="reviews.html" target="_blank">⭐⭐⭐⭐⭐</a></p>
           </figcaption>
         </figure>
         <figure class="col-lg-4 col-md-6">
-          <img src="99b745f6ce6a45903c3ed254afd72e46-w550-27.png">
+          <img src="assets/imgs/99b745f6ce6a45903c3ed254afd72e46-w550-27.png">
           <figcaption>
-            <p class="one"><a href="file:///C:/VS/Uber%20Eats/eats2.html">Точка Дзы — Цветной</a></p>
+            <p class="one"><a href="eats2.html">Точка Дзы — Цветной</a></p>
             <p class="two">₽₽ • Вьетнамская</p>
-            <p class="three">40 - 50 мин</p>
+            <p class="three"><a href="reviews.html" target="_blank">⭐⭐⭐</a></p>
           </figcaption>
         </figure>
         <figure class="col-lg-4 col-md-6">
-          <img src="100b745f6ce6a45903c3ed254afd72e46-w550-27.png">
+          <img src="assets/imgs/100b745f6ce6a45903c3ed254afd72e46-w550-27.png">
           <figcaption>
-            <p class="one"><a href="file:///C:/VS/Uber%20Eats/eats2.html">Cinnabon</a></p>
+            <p class="one"><a href="eats2.html">Cinnabon</a></p>
             <p class="two">₽ • Выпечка • Десерты • Капкейки</p>
-            <p class="three">25 - 35 мин</p>
+            <p class="three"><a href="reviews.html" target="_blank">⭐⭐⭐⭐</a></p>
           </figcaption>
         </figure>
         <figure class="col-lg-4 col-md-6">
-          <img src="101b745f6ce6a45903c3ed254afd72e46-w550-27.png">
+          <img src="assets/imgs/101b745f6ce6a45903c3ed254afd72e46-w550-27.png">
           <figcaption>
-            <p class="one"><a href="file:///C:/VS/Uber%20Eats/eats2.html">PIZZELOVE</a></p>
+            <p class="one"><a href="eats2.html">PIZZELOVE</a></p>
             <p class="two">₽₽ • Пицца</p>
-            <p class="three">15 - 25 мин</p>
+            <p class="three"><a href="reviews.html" target="_blank">⭐⭐⭐⭐⭐</a></p>
           </figcaption>
         </figure>
         <figure class="col-lg-4 col-md-6">
-          <img src="102b745f6ce6a45903c3ed254afd72e46-w550-27.png">
+          <img src="assets/imgs/102b745f6ce6a45903c3ed254afd72e46-w550-27.png">
           <figcaption>
-            <p class="one"><a href="file:///C:/VS/Uber%20Eats/eats2.html">Zю кафе — Тверская</a></p>
+            <p class="one"><a href="eats2.html">Zю кафе — Тверская</a></p>
             <p class="two">₽₽ • Японская</p>
-            <p class="three">25 - 35 мин</p>
+            <p class="three"><a href="reviews.html" target="_blank">⭐⭐⭐⭐⭐</a></p>
           </figcaption>
         </figure>
         <figure class="col-lg-4 col-md-6">
-          <img src="103b745f6ce6a45903c3ed254afd72e46-w550-27.png">
+          <img src="assets/imgs/103b745f6ce6a45903c3ed254afd72e46-w550-27.png">
           <figcaption>
-            <p class="one"><a href="file:///C:/VS/Uber%20Eats/eats2.html">Bar BQ Cafe — Манежная</a></p>
+            <p class="one"><a href="eats2.html">Bar BQ Cafe — Манежная</a></p>
             <p class="two">₽₽₽ • Европейская</p>
-            <p class="three">30 - 40 мин</p>
+            <p class="three"><a href="reviews.html" target="_blank">⭐⭐⭐⭐</a></p>
           </figcaption>
         </figure>
       </div>
@@ -230,9 +230,9 @@
                 </span>
               </div>
               <div class="icons">
-                <img src="facebook.png">
-                <img src="twitter.png">
-                <img src="instagram.png">
+                <img src="assets/imgs/facebook.png">
+                <img src="assets/imgs/twitter.png">
+                <img src="assets/imgs/instagram.png">
               </div>
             </div>
           </div>
@@ -251,14 +251,14 @@
         <div class="row logos around-lg around-md center-lg center-md center-xs">
           <div class="line line1 col-lg-12"></div>
           <div class="apple">
-            <img src="apple.png">
+            <img src="assets/imgs/apple.png">
             <div class="down">
               <p class="little">Download on the</p>
               <p class="big">App Store</p>
             </div>
           </div>
           <div class="play">
-            <img src="google-play.png">
+            <img src="assets/imgs/google-play.png">
             <div class="down">
               <p class="little">GET IT ON</p>
               <p class="big">Google Play</p>
