--- a/eats2.html
+++ b/eats2.html
@@ -15,7 +15,7 @@
             </div>
             <div class="navigation">
                 <button type="button" class="headbtn">Войти</button>
-                <img src="shopping-bag.png">
+                <img src="assets/imgs/shopping-bag.png">
             </div>
         </div>
     </div>
@@ -53,7 +53,7 @@
                         <p class="three">240 ₽</p>
                     </div>
                     <div class="menu-img">
-                        <img src="photo1.jpg">
+                        <img src="assets/imgs/photo1.jpg">
                     </div>
                 </div>
                 <div class="item">
@@ -65,7 +65,7 @@
                         <p class="three">320 ₽</p>
                     </div>
                     <div class="menu-img">
-                        <img src="Photo2.jpg">
+                        <img src="assets/imgs/Photo2.jpg">
                     </div>
                 </div>
                 <div class="item">
@@ -77,7 +77,7 @@
                         <p class="three">300 ₽</p>
                     </div>
                     <div class="menu-img">
-                        <img src="Pho.jpg">
+                        <img src="assets/imgs/Pho.jpg">
                     </div>
                 </div>
                 <div class="item">
@@ -89,7 +89,7 @@
                         <p class="three">320 ₽</p>
                     </div>
                     <div class="menu-img">
-                        <img src="photo4.jpg">
+                        <img src="assets/imgs/photo4.jpg">
                     </div>
                 </div>
                 <div class="item">
@@ -101,7 +101,7 @@
                         <p class="three">390 ₽</p>
                     </div>
                     <div class="menu-img">
-                        <img src="photo5.jpg">
+                        <img src="assets/imgs/photo5.jpg">
                     </div>
                 </div>
                 <div class="item">
@@ -113,7 +113,7 @@
                         <p class="three">350 ₽</p>
                     </div>
                     <div class="menu-img">
-                        <img src="photo6.jpg">
+                        <img src="assets/imgs/photo6.jpg">
                     </div>
                 </div>
             </div>
@@ -141,9 +141,9 @@
                           </span>
                         </div>
                         <div class="icons">
-                          <img src="facebook.png">
-                          <img src="twitter.png">
-                          <img src="instagram.png">
+                          <img src="assets/imgs/facebook.png">
+                          <img src="assets/imgs/twitter.png">
+                          <img src="assets/imgs/instagram.png">
                         </div>
                       </div>  
                 </div>
@@ -162,14 +162,14 @@
             <div class="end-links">
                 <div class="links">
                     <div class="apple">
-                        <img src="apple.png">
+                        <img src="assets/imgs/apple.png">
                         <div class="down">
                           <p class="little">Download on the</p>
                           <p class="big">App Store</p>
                         </div>
                       </div>
                       <div class="play">
-                        <img src="google-play.png">
+                        <img src="assets/imgs/google-play.png">
                         <div class="down">
                           <p class="little">GET IT ON</p>
                           <p class="big">Google Play</p>
